update config file and train.py

--- a/configs/msl_DUTS-TR.yaml
+++ b/configs/msl_DUTS-TR.yaml
@@ -21,7 +21,7 @@ training:
   step_lr_gamma: 0.95
   w_bs_loss: 1.5
   w_self_loss: 4.0
-  stop_bkg_loss: 100
+  stop_bkg_loss: 100 # to not use this, set it to 1000, to use, set it to 100
 
   # Augmentations
   crop_size: 224
