--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: uobjl
+name: peekaboo
 channels:
   - defaults
   - conda-forge
@@ -576,4 +576,3 @@ dependencies:
       - uvicorn==0.23.2
       - websockets==11.0.3
       - yacs==0.1.8
-prefix: /home/hasib/anaconda3/envs/uobjl
